<h5>1.4 Beta 1   [2019-10-05]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.10
<hr>
- fix getConfig() (goffy/mamba)
- fix call to PHPMailer (goffy/mamba)
- add check for getModule() in menu (mamba)
- add check for $pathModIcon32 in menu (mamba)
- fixed bugs in templates (goffy)
- fixed bugs in cron (goffy)
- fixed bugs in task.inc (goffy)
- added protocol level to cron for testing pruposes (goffy)
- add check for upload paths in admin/index (goffy)
- fixed bugs in calc letter size (goffy)
- various cosmetics in admin area (goffy)
- rebuilt list protocol items (goffy)

<h5>1.4 Alpha 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.9
<hr>
- namespaces (mamba)
- class autoloading (mamba)
- reverted in_array() true check (mamba)
- reversed to while (list()) (mamba)
- fix Capital letters in getHandler() (goffy/mamba)
- fix namespaces in oninstall (goffy/mamba)

<h5>1.3     NOT RELEASED</h5>
<hr>
 - replaced "dirname(__FILE__)" with "__DIR__" (mamba)
 - centered icons in tables (mamba)
 - some English updates (mamba)
 - standardize code (mamba,luciorota)
 - import procedure: check if limit options are compatible with php.ini 'max_input_vars' setting (luciorota)
 - update procedure: rename module's directory name to lowercase (luciorota)
 - templatize user side (luciorota)
 - added: send attachment as email attachment or as link (luciorota)
 - added: possibility to choose the maximum number of attachments (luciorota)
 - added: calculate email and attachments size (luciorota)
 - added: possibility to store templates also in database (luciorota)
 - added: html2txt function for non-HTML mail clients (luciorota)
 - added: breadcrumb class (luciorota)
 - added: updating to XOOPS 2.5.7 Multi-page help (luciorota)
 - fixed: when there is an apostrophe in the title, a backslash is obtained on reading the email (luciorota)
 - moved /css and /images to /assets (mamba)
 - renamed template extensions from .html to .tpl (mamba)
 - reversed "mod_" prefix on tables (mamba)