@@ -1,5 +1,4 @@
-<form name="<{$block.formname}>" id="<{$block.formname}>" action="<{$block.formaction}>" method="post"
-      enctype="multipart/form-data">
+<form name="<{$block.formname}>" id="<{$block.formname}>" action="<{$block.formaction}>" method="post" enctype="multipart/form-data">
     <table class="outer">
         <tr class="<{cycle values = "even,odd"}>">
             <td style="text-align:center;">
@@ -8,7 +7,7 @@
         </tr>
         <tr class="<{cycle values = "even,odd"}>">
             <td style="text-align:center;">
-                <input type="submit" class="formButton" name="submit" id="submit" value="<{$block.buttontext}>"
+                <input type="submit" class="formButton" name="submit" id="xn_block_submit" value="<{$block.buttontext}>"
                        title="<{$block.buttontext}>">
             </td>
         </tr>
