@@ -38,7 +38,7 @@ $mydirname = basename(__DIR__);
 xoops_load('XoopsLists');
 
 $modversion['version']             = 1.4;
-$modversion['module_status']       = 'Beta 1';
+$modversion['module_status']       = 'Beta 2';
 $modversion['release_date']        = '2019/10/05';
 $modversion['name']                = _MI_XNEWSLETTER_NAME;
 $modversion['description']         = _MI_XNEWSLETTER_DESC;
